# task_hrms

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.yaml  init.sh
task_hrms/: hooks.py  modules.txt
task_hrms/config/: desktop.py  docs.py
task_hrms/fixtures/: workflow.json
task_hrms/task_hrms/doctype/leave_request/: leave_request.js  leave_request.json  leave_request.py  test_leave_request.py
task_hrms/task_hrms/report/leave_summary_by_employee/: leave_summary_by_employee.js  leave_summary_by_employee.json  leave_summary_by_employee.py
